[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Anarchy/Textures/pie/pie_row1_001_select.png" type="Texture2D" id=1]
[ext_resource path="res://Resources/Anarchy/Textures/pie/pie_upgrade.png" type="Texture2D" id=2]
[ext_resource path="res://Resources/Anarchy/Textures/pie/pie_row1_001_bck_normal.png" type="Texture2D" id=3]
[ext_resource path="res://Resources/Anarchy/Scripts/pie_row1_button.gd" type="Script" id=4]
[ext_resource path="res://Resources/Anarchy/Textures/pie/pie_row1_001_bck_hover.png" type="Texture2D" id=5]
[ext_resource path="res://Resources/Anarchy/Textures/pie/pie_row1_001_mask.png" type="BitMap" id=6]

[node name="PieButton" type="TextureButton"]
offset_right = 442.0
offset_bottom = 214.0
focus_mode = 1
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
texture_click_mask = ExtResource( 6 )
script = ExtResource( 4 )

[node name="Select" type="TextureRect" parent="."]
self_modulate = Color( 0.117647, 0.105882, 0.0823529, 0.937255 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -143.0
offset_right = 244.0
offset_bottom = -27.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -73.0
offset_right = 41.0
offset_bottom = 35.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Center" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[connection signal="focus_entered" from="." to="." method="_on_PieRow1Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_PieRow1Button_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_PieRow1Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PieRow1Button_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_PieButton_toggled"]
